2012-12-28  Joone Hur  <joone.hur@intel.com>

        [EFL][WK2] Implement ewk_context_resource_cache_clear
        https://bugs.webkit.org/show_bug.cgi?id=104782

        The purpose of this API is to clear HTTP caches in local storage and 
        all resources cached in memory such as images, CSS, JavaScript, XSL, 
        and fonts.

        Reviewed by Kenneth Rohde Christiansen.

        * UIProcess/API/efl/ewk_context.cpp:
        (EwkContext::clearResourceCache): Call WebResourceCacheManager::ClearCacheForAllOrigins.
        (ewk_context_resource_cache_clear):
        * UIProcess/API/efl/ewk_context.h: Add ewk_context_resource_cache_clear. 
        * UIProcess/API/efl/ewk_context_private.h:
        (EwkContext):

2012-12-28  Mark Rowe  <mrowe@apple.com>

        Move logic for extracting the OS X marketing version in to WebCore
        <http://webkit.org/b/105841> / <rdar://problem/10736041>

        Reviewed by Dan Bernstein.

        * UIProcess/mac/WebPageProxyMac.mm:
        (WebKit::systemMarketingVersionForUserAgentString): Call the WebCore function instead
        of the WKSI function.
        (WebKit::WebPageProxy::standardUserAgent):
        * WebProcess/WebCoreSupport/mac/WebSystemInterface.mm:
        (InitWebCoreSystemInterface): Remove the code related to the WKSI symbol.

2012-12-28  Sam Weinig  <sam@webkit.org>

        Fix assert seen when adding a custom protocol handler before an initial
        web process has been created.

        * UIProcess/WebContext.h:
        (WebKit::WebContext::sendToNetworkingProcess):

2012-12-28  Martin Robinson  <mrobinson@igalia.com>

        [GTK][WK2] Add support for IME Composition
        https://bugs.webkit.org/show_bug.cgi?id=65093

        Reviewed by Carlos Garcia Campos.

        Add a WebKit2 implementation of the GtkInputMethodFilter and provide
        the necessary plumbing to pass composition information along with
        input method events.
